src/objects/zkmulti__MCBulk_Shipment_Status__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__BatchId__c</fullName>
        <label>Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Bulk_Shipment__c</fullName>
        <label>Bulk Shipment</label>
        <referenceTo>zkmulti__MCBulk_Shipment__c</referenceTo>
        <relationshipName>Bulk_Shipment_Status</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkmulti__Status_Message__c</fullName>
        <label>Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ERROR</fullName>
                </value>
                <value>
                    <fullName>PROCESSING_COMPLETED</fullName>
                </value>
                <value>
                    <fullName>VALIDATION_COMPLETED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bulk Shipment Status</label>
    <nameField>
        <displayFormat>Bulk-Ship-Status-{00000000}</displayFormat>
        <label>Bulk Shipment Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Shipment Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>